[tool.poetry]
name = "surehub-api"
version = "5.0.3"
license = "Apache-2.0"
description = "SureHub API is a simple, yet powerful RESTful API for products from Sure Petcare"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
repository = "https://github.com/fabieu/sureflap-api"
keywords = ["SureHub", "Sure Petcare", "REST", "API"]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
cachetools = "^5.5.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
requests = "^2.32.3"
dynaconf = "^3.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
vermin = "^1.6.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
