[tool.poetry]
name = "surehub-api"
version = "5.0.6"
license = "Apache-2.0"
description = "SureHub API is a simple, yet powerful RESTful API for products from Sure Petcare"
authors = ["Fabian Eulitz <dev@sustineo.de>"]
repository = "https://github.com/fabieu/sureflap-api"
keywords = ["SureHub", "Sure Petcare", "REST", "API"]

[tool.poetry.dependencies]
python = "~=3.10"
cachetools = "~=6.2"
fastapi = "~=0.118"
uvicorn = "~=0.37"
requests = "~=2.32"
dynaconf = "~=3.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.4"
vermin = "~=1.6"
autopep8 = "~=2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
